--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,10 @@
-name: Build and Publish Wheels
+name: Release
 
+# Triggered by pushing a version tag: git tag v0.2.0 && git push origin v0.2.0
 on:
-  release:
-    types: [published]
-  workflow_dispatch:
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build_linux:
@@ -74,13 +75,12 @@ jobs:
           name: wheels-sdist
           path: dist/*.tar.gz
 
-  publish:
-    name: Publish to PyPI
+  release:
+    name: Create GitHub Release and publish to PyPI
     needs: [build_linux, build_macos_x86, build_macos_arm, build_sdist]
     runs-on: ubuntu-latest
-    environment: pypi
     permissions:
-      id-token: write  # required for trusted publishing
+      contents: write   # required to create GitHub Releases
 
     steps:
       - uses: actions/download-artifact@v4
@@ -89,5 +89,13 @@ jobs:
           path: dist
           merge-multiple: true
 
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: dist/*
+          generate_release_notes: true   # auto-generates notes from merged PRs/commits
+
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_TOKEN }}
