Add v0.2.0: rotate, speed, volume, merge, reverse, metadata, thumbnails
  New features:
  - rotate_video: rotate 90/180/270 degrees
  - change_speed: speed up or slow down playback
  - adjust_volume: increase/decrease audio volume
  - merge_videos: concatenate two videos
  - reverse_video: play video backwards
  - set_metadata / strip_metadata: read/write container tags
  - extract_frames: multiple frames at a time interval
  - create_thumbnail: smart frame from 1/3 into video

  CI/CD:
  - Combined lint (black, isort, flake8) + test into single workflow
  - Publish pipeline tightened to semver tags only (v[0-9]+.[0-9]+.[0-9]+)
  - Fixed delocate-wheel failure on macOS arm64

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,10 @@
 name: Release
 
-# Triggered by pushing a version tag: git tag v0.2.0 && git push origin v0.2.0
+# Triggered only by pushing a version tag: git tag v0.2.0 && git push origin v0.2.0
 on:
   push:
     tags:
-      - 'v*'
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build_linux:
