--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,9 +26,38 @@ jobs:
           name: wheels-linux
           path: ./wheelhouse/*.whl
 
+  build_macos_arm:
+    name: Build macOS arm64 wheels
+    runs-on: macos-14
+    env:
+      # Homebrew FFmpeg on macOS 14 arm64 requires deployment target 14.0.
+      # Setting this here tags the wheel as macosx_14_0_arm64 so delocate doesn't reject it.
+      CIBW_ENVIRONMENT_MACOS: "MACOSX_DEPLOYMENT_TARGET=14.0 DYLD_LIBRARY_PATH=$(brew --prefix)/lib"
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.21.3
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: wheels-macos-arm
+          path: ./wheelhouse/*.whl
+
   build_macos_x86:
-    name: Build macOS x86_64 wheels
-    runs-on: macos-13
+    name: Build macOS x86_64 wheels (cross-compiled on arm64)
+    runs-on: macos-14
+    env:
+      CIBW_ARCHS_MACOS: "x86_64"
+      # Install Rosetta 2 and an x86_64 Homebrew prefix (/usr/local), then install FFmpeg for that arch.
+      CIBW_BEFORE_ALL_MACOS: >
+        softwareupdate --install-rosetta --agree-to-license || true &&
+        arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)" < /dev/null || true &&
+        arch -x86_64 /usr/local/bin/brew install ffmpeg pkg-config
+      # x86_64 Homebrew lives at /usr/local, not /opt/homebrew.
+      # FFmpeg from Homebrew on macos-14 requires deployment target 14.0 regardless of arch.
+      CIBW_ENVIRONMENT_MACOS: "MACOSX_DEPLOYMENT_TARGET=14.0 PKG_CONFIG_PATH=/usr/local/opt/ffmpeg/lib/pkgconfig DYLD_LIBRARY_PATH=/usr/local/lib"
+      CIBW_REPAIR_WHEEL_COMMAND_MACOS: "DYLD_LIBRARY_PATH=/usr/local/lib delocate-wheel -w {dest_dir} -v {wheel}"
     steps:
       - uses: actions/checkout@v4
 
@@ -40,18 +69,42 @@ jobs:
           name: wheels-macos-x86
           path: ./wheelhouse/*.whl
 
-  build_macos_arm:
-    name: Build macOS arm64 wheels
-    runs-on: macos-14
+  build_windows:
+    name: Build Windows x86_64 wheels
+    runs-on: windows-latest
+    env:
+      CIBW_ARCHS_WINDOWS: "AMD64"
+      # pkg-config reads .pc files to pass -I/-L flags to the compiler.
+      CIBW_ENVIRONMENT_WINDOWS: "PKG_CONFIG_PATH=C:/ffmpeg/lib/pkgconfig"
+      # delvewheel bundles the FFmpeg .dll files into the wheel (equivalent to auditwheel on Linux).
+      CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel} --add-path C:/ffmpeg/bin"
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install pkg-config
+        run: choco install pkgconfiglite -y
+
+      - name: Download and extract FFmpeg dev libraries
+        shell: pwsh
+        run: |
+          $url = "https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-win64-gpl-shared.zip"
+          Invoke-WebRequest -Uri $url -OutFile "$env:TEMP\ffmpeg.zip"
+          Expand-Archive -Path "$env:TEMP\ffmpeg.zip" -DestinationPath "$env:TEMP\ffmpeg_extract"
+          # The zip contains a single top-level folder whose name varies by build date; move it to C:\ffmpeg.
+          $src = Get-ChildItem "$env:TEMP\ffmpeg_extract" -Directory | Select-Object -First 1
+          Move-Item $src.FullName "C:\ffmpeg"
+          # Add the bin dir to PATH so delvewheel can locate the .dll files at repair time.
+          "C:\ffmpeg\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+      - name: Install delvewheel
+        run: pip install delvewheel
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.21.3
 
       - uses: actions/upload-artifact@v4
         with:
-          name: wheels-macos-arm
+          name: wheels-windows
           path: ./wheelhouse/*.whl
 
   build_sdist:
@@ -77,7 +130,7 @@ jobs:
 
   release:
     name: Create GitHub Release and publish to PyPI
-    needs: [build_linux, build_macos_x86, build_macos_arm, build_sdist]
+    needs: [build_linux, build_macos_arm, build_macos_x86, build_windows, build_sdist]
     runs-on: ubuntu-latest
     permissions:
       contents: write   # required to create GitHub Releases
