--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,14 +3,17 @@ repos:
     rev: 24.10.0
     hooks:
       - id: black
+        files: ^(src|tests)/
         language_version: python3
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
     hooks:
       - id: isort
+        files: ^(src|tests)/
 
   - repo: https://github.com/PyCQA/flake8
     rev: 7.1.1
     hooks:
       - id: flake8
+        files: ^(src|tests)/
